--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Treat Template
-url: "https://spring-bat.cloudvent.net/"
+title: Welcome to the kitchen of thelazychef
+url: "http://thelazychefrecipes.com/"
 baseurl:
 google_analytics_key:
 newsletter_action:
@@ -10,10 +10,10 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Food blog template for Jekyll.
+description: Food blog of thelazychef
 author:
-  name:
-  email:
+  name: The Lazy Chef
+  email: thelazychefrecipes@gmail.com
   twitter: # twitter username without the @ symbol
 social:
   name: Treat Template
