--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,4 +1,4 @@
-author_image: /images/author.jpg
+author_image: https://images.unsplash.com/photo-1532460734809-e7f8475ca917?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80
 description_markdown: "I am thelazychef and I like eating"
 # facebook: Nada
 twitter: thelazychef
