Fix twitter and instagram handles

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,6 +1,6 @@
 author_image: https://images.unsplash.com/photo-1532460734809-e7f8475ca917?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80
 description_markdown: "I am thelazychef and I like eating"
 # facebook: Nada
-twitter: thelazychef
-pinterest: thelazychef
+twitter: lazychefrecipes
+pinterest: thelazychefrecipes
 instagram: thelazychef
