--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Welcome to the kitchen of thelazychef
 url: "http://thelazychefrecipes.com/"
 baseurl:
-google_analytics_key: G-DCLPF4TJQD
+google_analytics_key: UA-154894670-1
 newsletter_action:
 disqus_shortname:
 
